# NeuroAE

./: .gitignore  .gitmodules  README.md  pyproject.toml
cls_config/: data.yml  experiments.yml  model.yml  training.yml
config/: 1st_experiments.yml  data.yml  experiments.yml  experiments_ConvAE.yml  experiments_ConvVAE.yml  experiments_LAE.yml  experiments_VAE.yml  filter.yml  filter_experiments.yml  model.yml  training.yml
src/neuroae/: __main__.py  adni2.py  eval.py  inference.py  load_data.py  train.py
src/neuroae/data/: __init__.py  adni.py  adni2.py  adni3.py  base.py  ebrains.py  hcp.py  parcellation.py  utils.py
src/neuroae/metrics/: classifier_accuracy.py  fc_preservation.py  logreg_accuracy.py  silhouette.py  sliding_window_fcd.py  swfcd_torch.py
src/neuroae/models/: __init__.py  autoencoderkl.py  basic.py  basicConvAE.py  convAE.py  convAE_old.py  convAEpp.py  determAE.py  head.py  linear.py  monaiAE.py  monaiAEKL.py  pca.py  perl2023.py  pinaya2018.py  seqAE.py  variational.py
src/neuroae/models/old/: autoencoderkl.py  basic.py  basicConvAE.py  convAE_old.py  convAEpp.py  linear.py  pca.py  seqAE.py
src/neuroae/utils/: __init__.py  dict_utils.py  ebrains_loader.py  np_utils.py
src/neurocls/: __init__.py  __main__.py  eval.py  train.py
src/neurocls/features/: __init__.py  builders.py
src/neurocls/graph/: __init__.py
src/neurocls/models/: __init__.py  braingnn.py  classical.py  mlp.py  registry.py
src/neurocls/utils/: __init__.py  runtime.py
src/training_tracker/: __main__.py
src/training_tracker/core/: index.py  manager.py  parameter_index.py  schemas.py  storage.py
src/training_tracker/ui/: app.py
