[project]
name = "neuroae"
version = "0.1.0"
description = "Research framework for analysing latent representations in neuroimaging using autoencoders and cross-group decoding."
authors = [
  {name = "Skaiste Butkute", email = "butkute.skaiste@gmail.com"}
]
maintainers = [
  {name = "Skaiste Butkute", email = "butkute.skaiste@gmail.com"}
]
readme = "README.md"
requires-python = "==3.9.25"
dependencies = [
    "h5py",
    "jupyter",
    "matplotlib",
    "nibabel",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
    "seaborn",
    "torch",
    "tqdm",
    "neuronumba @ git+https://github.com/neich/neuronumba.git@main#subdirectory=src",
    "scikit-learn>=1.6.1",
    "streamlit",
    "monai>=1.5.2",
    "einops>=0.8.2",
    "torchsummary>=1.5.1",
]

[project.scripts]
neuroae = "neuroae.__main__:main"
training-tracker = "training_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroae", "src/training_tracker"]

[tool.hatch.metadata]
allow-direct-references = true
